revert jsonEditor; fix off-screen icons later

--- a/frame/src/components/FJSONEditor/FJSONEditor.scss
+++ b/frame/src/components/FJSONEditor/FJSONEditor.scss
@@ -17,8 +17,7 @@
   box-shadow: 1px 2px 2px 1px rgba(39, 39, 39, 0.85) !important;
   background: rgb(238, 238, 238) !important;  /* fallback for old browsers */
   min-height: 250px;
-  max-height: 1280px;
-  overflow-y: scroll !important;
+  max-height: 450px;
 }
 
 .jsoneditor-menu {
